--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-    <a href="./gallery.html">Галерея</a>
+    <section class="gallery-section">
+      <div class="container">
+        <form class="search-form js-search-form">
+          <input type="text" name="user-search-query" class="search-input" />
+          <button type="submit" class="search-btn">search</button>
+        </form>
+        <ul class="gallery js-gallery list"></ul>
+        <div class="target-element"></div>
+        <button type="button" class="load-more js-load-more is-hidden">
+          Load more
+        </button>
+      </div>
+    </section>
+  <script src="./js/gallery.js" type="module"></script>
   </body>
 </html>
