--- a/src/index.html
+++ b/src/index.html
@@ -7,19 +7,26 @@
     <link rel="stylesheet" href="./sass/index.scss" />
   </head>
   <body>
-    <section class="gallery-section">
       <div class="container">
-        <form class="search-form js-search-form">
-          <input type="text" name="user-search-query" class="search-input" />
-          <button type="submit" class="search-btn">search</button>
+        
+          <form class="search-form" id="search-form">
+          <input
+          class = "search-input"
+            type="text"
+            name="searchQuery"
+            autocomplete="off"
+            placeholder="Search images..."
+          />
+          <button type="submit" class = "search">
+            <svg class="search-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-search"></use>
+            </svg>
+            </button>
         </form>
-        <ul class="gallery js-gallery list"></ul>
-        <div class="target-element"></div>
-        <button type="button" class="load-more js-load-more is-hidden">
-          Load more
-        </button>
-      </div>
-    </section>
+      </div> 
+        <div class="gallery"></div>
+        <button type="button" class="load-more">Load more</button>
+
   <script src="./js/gallery.js" type="module"></script>
   </body>
 </html>
